CRYTOIMPERIESTMACHINAGIAGEOMETRYSCYTHIOGRAPHY/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Why\Documents\code\ClassCopmrehension\Encyption
-d
C:\Users\Why\Documents\code\ClassCopmrehension\Encyption\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Why\Documents\code\ClassCopmrehension\Encyption\StageOne.java
<---- end of javadoc command ---->
Loading source file C:\Users\Why\Documents\code\ClassCopmrehension\Encyption\StageOne.java...
C:\Users\Why\Documents\code\ClassCopmrehension\Encyption\StageOne.java:20: error: <identifier> expected
    public void 
               ^
C:\Users\Why\Documents\code\ClassCopmrehension\Encyption\StageOne.java:21: error: '(' expected
}
^
C:\Users\Why\Documents\code\ClassCopmrehension\Encyption\StageOne.java:21: error: reached end of file while parsing
}
 ^
3 errors
